@@ -1,15 +1,20 @@
 package com.ownwn.server;
 
-import java.util.*;
-import java.util.stream.Collectors;
+
+import com.ownwn.server.java.lang.replacement.*;
+
+import java.util.Locale;
+import java.util.regex.Matcher;
+import java.util.regex.Pattern;
 
 public class Headers {
     private final Map<String, String> internalHeaders;
+    private static final Pattern headerRegex = Pattern.compile("^([^:]+):(.+)$");
 
     public Headers(com.sun.net.httpserver.Headers headers) {
         this();
         for (var header : headers.entrySet()) {
-            internalHeaders.put(header.getKey(), header.getValue().get(0));
+            internalHeaders.put(header.getKey(), header.getValue().getFirst());
         }
     }
 
@@ -17,9 +22,12 @@ public class Headers {
         Headers headers = new Headers();
         for (String header : rawHeaders) {
             if (header == null) continue;
-            String[] parts = header.split(":");
-            if (parts.length != 2) continue;
-            headers.put(parts[0], parts[1]);
+            Matcher m = headerRegex.matcher(header);
+            if (!m.find()) {
+                continue;
+            }
+
+            headers.put(m.group(1), m.group(2));
         }
         return headers;
     }
